BoltonCupImage: fix overlay vertical overflow

--- a/src/BoltonCup.Common/Components/BoltonCupImage/BoltonCupImage.razor.css
+++ b/src/BoltonCup.Common/Components/BoltonCupImage/BoltonCupImage.razor.css
@@ -2,7 +2,7 @@
     position: relative;
     cursor: pointer;
     overflow: hidden;
-    display: inline-block;
+    display: inline-flex;
 }
 
 .edit-image {
